fix text padding on mobile; also testing auto close nav bar when navigating to a section on mobile

--- a/assets/css/swag.css
+++ b/assets/css/swag.css
@@ -31,7 +31,7 @@ p {
 .item h3 {
     font-size: 1.3em;
     text-align: left;
-    padding-left: 1.6vh;
+    padding: 0 1.6vh 0 1.6vh;
 }
 
 .item h5 {
